--- a/style/reset.css
+++ b/style/reset.css
@@ -12,6 +12,9 @@
     font-size: 100%;
     vertical-align: baseline;
   }
+  input {
+    outline: none;
+  }
   article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
     display: block;
   }
