--- a/style/style.css
+++ b/style/style.css
@@ -27,11 +27,12 @@ input {
     background-color: rgb(131, 131, 131);
     color: white;
 }
-input:hover {
-    box-shadow: 0 0 10px 1px inset rgb(255, 255, 255);
+input:hover, .lightGray:hover {
+    box-shadow: inset 0 0 10px rgb(255, 255, 255);
+    transition: all 0.3s ease;
 }
 .lightGray:hover {
-    box-shadow: 0 0 10px 1px inset rgb(58, 58, 58);
+    box-shadow: inset 0 0 10px rgb(58, 58, 58);
 }
 .zero {
     width: 155px;
